[gd_scene load_steps=7 format=3 uid="uid://d1ombrhb13r6s"]

[ext_resource type="Script" uid="uid://cwgkve0txudle" path="res://Scripts/Controllers/GrimoireUIController.gd" id="1_wiae1"]
[ext_resource type="FontFile" uid="uid://cq6k7a56rmitc" path="res://Assets/UI/Font/PixelOperator8-Bold.ttf" id="2_32588"]
[ext_resource type="Theme" uid="uid://7l18ui63kjji" path="res://Assets/UI/Themes/Grimoire_UI_Theme.tres" id="2_tnkrs"]
[ext_resource type="Script" uid="uid://dtuo1bniqd1n4" path="res://Scripts/Controllers/PageOrderUIController.gd" id="3_32588"]
[ext_resource type="Theme" uid="uid://dqkdlfwsoxe0w" path="res://Assets/UI/Themes/ScrollContainer_UI_Theme.tres" id="4_lny7x"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_yp6ly"]
color = Color(1, 0.50980395, 0.45490196, 1)
grow_begin = 10.0
grow_end = 10.0
thickness = 2

[node name="GrimoireUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wiae1")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(770, 270)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -387.0
offset_top = -270.0
offset_right = 383.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_tnkrs")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="PanelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/AspectRatioContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="PageVBox" type="VBoxContainer" parent="PanelContainer/AspectRatioContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Page Label" type="Label" parent="PanelContainer/AspectRatioContainer/MarginContainer/PageVBox"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.8509804, 1, 0.8862745, 1)
theme_override_fonts/font = ExtResource("2_32588")
theme_override_font_sizes/font_size = 32
text = "Pages"

[node name="Line" type="HSeparator" parent="PanelContainer/AspectRatioContainer/MarginContainer/PageVBox"]
visible = false
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_yp6ly")

[node name="PageScrollContainer" type="ScrollContainer" parent="PanelContainer/AspectRatioContainer/MarginContainer/PageVBox"]
custom_minimum_size = Vector2(750, 250)
layout_mode = 2
theme = ExtResource("4_lny7x")
script = ExtResource("3_32588")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/AspectRatioContainer/MarginContainer/PageVBox/PageScrollContainer"]
layout_mode = 2

[node name="PagesShowcase" type="HBoxContainer" parent="PanelContainer/AspectRatioContainer/MarginContainer/PageVBox/PageScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 20
alignment = 1
